--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "sass": "^1.83.4",
     "typescript": "~5.7.2",
     "vite": "^6.0.7",
-    "vite-plugin-dts": "^4.4.0",
+    "vite-plugin-dts": "^4.5.4",
     "vue-router": "^4.5.0",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^3.2.4"
   },
   "repository": {
     "type": "git",
@@ -47,6 +47,6 @@
     "ui",
     "typescript"
   ],
-  "author": "",
+  "author": "adahei",
   "license": "MIT"
 }
